# 50V3R31GN-M4CH1N4

./: .crush.json  .env.example  .git-commit-template  .gitattributes  .gitignore  .gitmodules  .releaserc.json  ABOUT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  DIRECTOR_SOUL.md  DeepClean-C.ps1  GEMINI.md  GLM.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_BASE.md  LEAD_ARCHITECT.md  LICENSE  Modelfile  Modelfile.test  NAVIGATOR.md  README and About Blurb Update.md  README.md  RED_RULES.md  RED_TRADE_PROPOSAL_V2.md  RESEARCHER_SOUL.md  SESSION_HANDOFF.md  SOUL.md  SOVEREIGN-IDENTITY.md  SOVEREIGN_VITAL_SIGNS.md  audit_results.txt  audit_script.py  chrome_tools.txt  claude report.md  claude restart prompt.md  claudeReport.md  clean.json  (+41 more)
.factory/: config.yaml  mcp.json  settings.json  sync-factory.ps1
.gemini/: settings.json
50v3r31gn-bridge/: 50v3r31gn-bridge.js  module.json
akashik_guides/: COMMAND_MANIFEST.md  DEV_SCRIPTS_MANIFEST.md  KNOWLEDGE_BASE.md  README.md
assets/: logo-compressed.png:Zone.Identifier
config/: brand_manifest.json  mooncake_master.json  mooncake_quaternary.json
crates/hermes-router/: Cargo.toml
crates/hermes-router/src/: main.rs  security.rs
crates/modules/mirage-vfs/: Cargo.toml  default.nix
crates/modules/mirage-vfs/src/: config.rs  lib.rs  mount.rs
crates/modules/pretext-core/: Cargo.toml  default.nix
crates/modules/pretext-core/src/: ascii_mapper.rs  layout.rs  lib.rs  virtualization.rs
crates/modules/pretext-core/tests/: layout_tests.rs
crates/modules/vibevoice-asr/: Cargo.toml  default.nix
crates/modules/vibevoice-asr/src/: ble_stream.rs  main.rs
crates/openclaw-agents/: AGENTS.md  Cargo.toml
crates/openclaw-agents/src/: agent_registry.rs  crash_recovery.rs  lib.rs  warm_pool.rs
crates/sovereign-flowy/: Cargo.toml
crates/sovereign-flowy/src/: lib.rs  main.rs
crates/sovereign-ingestor/: Cargo.toml
crates/sovereign-ingestor/src/: main.rs
crates/sovereign-kernel/: Cargo.toml
crates/sovereign-kernel/src/: main.rs  vitals.rs
crates/sovereign-social/: Cargo.toml
crates/sovereign-social/src/: lib.rs
crates/sovereign-synapse/: Cargo.toml
crates/sovereign-synapse/src/: lib.rs  main.rs  parseltongue.rs
crates/sovereign-vesper-eye/: Cargo.toml
crates/sovereign-vesper-eye/src/: curiosity.rs  failure_tracker.rs  lib.rs  log_distiller.rs  main.rs  pattern_matcher.rs  screen_scanner.rs
crates/sovereign-whisper-mcp/: Cargo.toml
crates/sovereign-whisper-mcp/src/: main.rs
crush/: .gitignore  AGENTS.md  auth_pane.go  config.go  config_test.go  cron.go  dashboard_bridge.go  dev.go  devdom.go  forge.go  forge_cli_test.go  forge_integration_test.go  forge_test.go  go.mod  go.sum  hack.go  hack_test.go  identity_st3gg.go  logger.go  logseq.go  main.go  meeting.go  nucleus.go  profile.go  proposal.go  proxy.go  proxy_test.go  reconstruct.go  registry.go  registry_test.go  social.go  spatial.go  st3gg.go  st3gg_test.go  vault.go  watcher.go  watcher_test.go  wsa.go  wsa_test.go
dashboard/: AGENTS.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
deck-igniter/: config.go  go.mod  go.sum  launcher.go  main.go  prober.go  ssh.go
docs/: CLAUDE_REALIGNMENT.md  COMMAND_MANIFEST.md  DREAMS.md  GEMINI.md  GITHUB_ABOUT.md  GITHUB_ABOUT.txt  IMPLEMENTATION_PLAN.md  LOCAL_SETUP.md  LOGGING_GUIDE.md  MASTER_STARTUP_GUIDE.md  README.md  SERVER_SETUP.md  Sovereign_OS.md  UPGRADE_PATH.md  WIKI_DEPRECATION_NOTICE.md  _config.yml  index.html  research.md  sovereign-style.css  style.css  zeroclaw.service
foundry-module/: foundry-api-bridge.js  module.json
fvtt-cyberpunk-red-core-v0.92.3 assets/: .eslintrc.json  .gitignore  .markdownlint.yaml  CHANGELOG.cz.md  CHANGELOG.de.md  CHANGELOG.es.md  (+16 more)
plugins/sovereign-red-plugin/zeroclaw/crates/zeroclaw-kernel/: Cargo.toml
plugins/sovereign-red-plugin/zeroclaw/crates/zeroclaw-kernel/src/: main.rs
plugins/sovereign-red-plugin/zeroclaw/crates/zeroclaw-kernel/src/cv/: mod.rs
plugins/sovereign-red-plugin/zeroclaw/crates/zeroclaw-kernel/src/linguistics/: mod.rs  pruner.rs
plugins/sovereign-red-plugin/zeroclaw/crates/zeroclaw-kernel/src/rdt/: mod.rs
plugins/sovereign-red-plugin/zeroclaw/crates/zeroclaw-kernel/src/rules/: canonical_math.rs  rules_oracle.rs  swarm_resolver.rs
plugins/sovereign-red-plugin/zeroclaw/crates/zeroclaw-kernel/src/server/: clawlink.rs
plugins/sovereign-red-plugin/zeroclaw/crates/zeroclaw-kernel/src/steganography/: mod.rs
sidecars/browser-agent-harness/: Cargo.toml
sidecars/browser-agent-harness/src/: main.rs
sidecars/kanban-mcp-server/: README.md  pyproject.toml
sidecars/kanban-mcp-server/src/kanban_mcp/: __init__.py  db.py  server.py
sidecars/kanban-mcp-server/tests/: test_tools.py
sidecars/voxcpm-tts/: Cargo.toml
sidecars/voxcpm-tts/src/: main.rs
zeroclaw/: AGENTS.md  Cargo.toml  flake.nix
zeroclaw/crates/sovereign-observer/: Cargo.toml
zeroclaw/crates/sovereign-observer/src/: main.rs
zeroclaw/crates/zeroclaw-api/: Cargo.toml
zeroclaw/crates/zeroclaw-kernel/: Cargo.toml
zeroclaw/crates/zeroclaw-kernel/src/: main.rs
zeroclaw/crates/zeroclaw-kernel/src/linguistics/: tri_scorer.rs
zeroclaw/crates/zeroclaw-kernel/src/perception/: mod.rs
zeroclaw/crates/zeroclaw-kernel/src/server/: telemetry.rs
zeroclaw/crates/zeroclaw-kernel/src/steganography/: mod.rs
zeroclaw/crates/zeroclaw-runtime/: Cargo.toml
zeroclaw/models/: falcon-0.3b-ocr.onnx  falcon-0.3b-ocr.onnx.data
zeroclaw/scripts/: setup-resident-models.sh
zeroclaw/src/: lib.rs  main.rs
zeroclaw/src/cv/: colpali_bridge.rs  edge_detector.rs  mod.rs
zeroclaw/src/db/: import.rs  mod.rs  schema.rs  search.rs
zeroclaw/src/linguistics/: mod.rs  tri_scorer.rs
zeroclaw/src/math/: interlock.rs  mod.rs
zeroclaw/src/perception/: mod.rs
zeroclaw/src/rdt/: mod.rs
zeroclaw/src/rules/: bonsai_oracle.rs  dv_resolver.rs  mod.rs  rules_oracle.rs  swarm_resolver.rs
zeroclaw/src/server/: clawlink.rs  handler.rs  mod.rs  rpc.rs  vsb_udp.rs
zeroclaw/src/steganography/: mod.rs
zeroclaw/tests/: rules_audit.rs  st3gg_test.rs
(+5877 files in other folders)
