[workspace]
members = [
    "crates/*",
    "sidecar-*",
    "sidecars/warp-observer",
    "sidecars/gepa-curator",
    "sovereign-sdk",
    "zeroclaw/crates/*"
]
exclude = [
    "sidecar-browser-extension",
    "sidecar-logseq-plugin",
    "sidecar-obsidian-plugin",
    "sidecar-proxy",
]
resolver = "2"
