[workspace]
members = [
    "plugins/sovereign-red-plugin/zeroclaw/crates/*",
    "crates/*",
    "sidecars/*",
]
exclude = [
    "sidecars/drawthings-plugin",
    "sidecars/free-claude-proxy",
    "sidecars/git-nexus",
    "sidecars/halo",
    "sidecars/hermes-agent-nous",
    "sidecars/hermes-desktop",
    "sidecars/hermeshub",
    "sidecars/hermes-web-ui",
    "sidecars/paperclip-adapter",
    "sidecars/plur",
    "sidecars/sidecar-browser-extension",
    "sidecars/sidecar-obsidian-plugin",
    "sidecars/sidecar-proxy",
    "sidecars/sidecar-logseq-plugin",
    "sidecars/skill-marketplace",
    "sidecars/stash",
    "sidecars/worldseed",
]
resolver = "2"
