[package]
name = "zeroclaw"
version = "3.2.3"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json"] }
image = "0.25"
imageproc = "0.26"
crc32fast = "1.4"
# Phase 16: Falcon Sidecar — sequential VRAM management and ONNX OCR inference
base64 = "0.22"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["cuda"] }
sovereign-sdk = { path = "../sovereign-sdk" }
# Phase 59: Canonical Rules Kernel
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
