[package]
name = "hermes-router"
version = "0.1.0"
edition = "2021"

[dependencies]
sovereign-core = { path = "../sovereign-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
