[package]
name = "hermes-router"
version = "0.1.0"
edition = "2021"

[dependencies]
sovereign-core = { path = "../sovereign-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
spiffe = { version = "0.14", features = ["workload-api", "x509"] }
rustls = "0.23"
tokio-rustls = "0.26"
image = "0.25"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
aes-gcm = "0.10"
anyhow = "1.0"
