[package]
name = "openclaw-agents"
version = "0.1.0"
edition = "2021"
description = "Phase 77: OpenClaw Managed Agents — WarmPool, CrashRecovery, AgentRegistry"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
