[package]
name = "sovereign-flowy"
version = "3.8.8"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
