[package]
name    = "sovereign-kernel"
version = "3.8.24-SYNTHESIS"
edition = "2021"
description = "Phase 87: Kernel Vitals Artery — CPU/VRAM/IO telemetry via /proc, streamed to HUD [VITALS] panel"

[dependencies]
anyhow       = "1.0"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tokio        = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util  = "0.3"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "sovereign-kernel"
path = "src/main.rs"
