[package]
name = "sovereign-social"
version = "0.1.0"
edition = "2021"
description = "ActivityPub relay for agentic IPC in Sovereign OS"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
