[package]
name = "sovereign-synapse"
version = "3.8.24-SYNTHESIS"
edition = "2021"

[dependencies]
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sovereign-synapse"
path = "src/main.rs"
