[package]
name = "sovereign-whisper-mcp"
version = "0.1.0"
edition = "2021"
description = "VSB audio ingestor + Whisper STT MCP sidecar"

[[bin]]
name = "sovereign-whisper-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
