[package]
name = "browser-agent-harness"
version = "3.8.26-SYNTHESIS"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chromiumoxide = { version = "0.6", features = ["tokio-runtime"] }
futures = "0.3"
sovereign-mcp = { path = "../../crates/sovereign-mcp" }
sovereign-memory = { path = "../../crates/sovereign-memory" }
