[package]
name = "mirage-vfs"
version = "1.0.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.28", features = ["fs", "mount"] }

[dev-dependencies]
tempfile = "3.0"
