[package]
name = "vibevoice-asr"
version = "1.1.0"
edition = "2021"

[features]
default = []
ble = ["btleplug"]

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
btleplug = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3.0"
