[package]
name = "zeroclaw"
version = "3.8.24-SYNTHESIS"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json"] }
image = "0.25"
imageproc = "0.26"
crc32fast = "1.4"
# Phase 16: Falcon Sidecar — sequential VRAM management and ONNX OCR inference
base64 = "0.22"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["cuda"] }
sovereign-sdk = { path = "../../../../crates/sovereign-sdk" }
sovereign-core = { path = "../../../../crates/sovereign-core" }
# Phase 59: Canonical Rules Kernel
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
# Phase 67: Artery Manager binary
anyhow = "1.0"
# Phase 63: RDT Oracle — Recurrent-Depth Transformer (OpenMythos ACT loop)
# Compile without cuda feature on Node B (AMD/Vulkan) — enable cuda on Node C with:
# cargo build --features candle-core/cuda
candle-core = { version = "0.8" }
candle-nn = { version = "0.8" }
candle-transformers = { version = "0.8" }
hound = "3.5.1"
rubato = "2.0.0"
byteorder = "1.5.0"
tokenizers = "0.22.2"

[features]
cuda = ["candle-core/cuda"]

[[bin]]
name = "artery_manager"
path = "src/bin/artery_manager.rs"
